# survey-test

./: .env.example  .gitattributes  .gitignore  .gitmodules  .mcp.json  README.md  package.json  pyproject.toml
.claude/: settings.json
.claude/commands/: collect-results.md  connect-prolific.md  find-prolific-ids.md  launch-study.md  new-survey.md  setup-keys.md
docs/: 01-setup.md  02-first-survey.md  03-prolific-integration.md  04-launch-and-collect.md  05-troubleshooting.md
examples/: sample_survey_spec.yaml
prolific_mcp/: __init__.py  client.py  models.py  server.py  tools.py
scripts/: build_ai_survey.py  connect_prolific.py  doctor.py  embed_completion_code.py  save_completion_code_to_library.py  set_ai_survey_flow.py  setup.ps1  setup.sh
